[gd_scene load_steps=3 format=3 uid="uid://6u076q42evym"]

[ext_resource type="Script" uid="uid://bvp1i2qvvfcpw" path="res://scenes/map/prologue/tutorial_popup.gd" id="1_6nwiv"]
[ext_resource type="Texture2D" uid="uid://bhoaontrll7iu" path="res://scenes/map/prologue/卡牌.jpg" id="2_obxk2"]

[node name="TutorialPopup" type="Control"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 3
anchors_preset = 0
offset_right = 722.0
offset_bottom = 459.0
script = ExtResource("1_6nwiv")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 0
offset_right = 165.0
offset_bottom = 199.0
texture = ExtResource("2_obxk2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 300.0
offset_right = 600.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 30
text = "撒达所大多"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
offset_left = -707.56
offset_top = -52.82
offset_right = -583.56
offset_bottom = 3.17999
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "关闭"

[node name="PrevButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
offset_left = -257.56
offset_top = -52.82
offset_right = -133.56
offset_bottom = 3.17999
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "上一页"

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
offset_left = -91.56
offset_top = -46.82
offset_right = 8.44
offset_bottom = 3.17999
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "下一页"
